--- a/public-app/index.html
+++ b/public-app/index.html
@@ -4,12 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/icons/icon.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#10b981" />
-  <meta name="description" content="Dari Juruladen BAM untuk keluarga BAM" />
-  <meta name="keywords"
-    content="Majmu' Manan, majmu' manan, majmu' bam, majmu manan, majmu bam, Asmul Husna, asmul husna, Doa Birrulwalidain, Qosidah Romadhon, doa birrulwalidain, qosidah romadhon" />
-  <meta name="author" content="Juruladen BAM" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff" />
+  <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#0f172a" />
+
   <link rel="apple-touch-icon" href="/icons/icon.png">
   <link href="https://fonts.googleapis.com/css2?family=Scheherazade+New:wght@400;700&display=swap" rel="stylesheet">
   <title>Majmu' Manan</title>
